...
              onTap: () {
                Navigator.pop(context);
              },
            ),
            DrawerItem(
              icon: Icons.payment,
              title: 'Payment',
              isSelected: false,
              onTap: () {
                Navigator.pop(context);
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const PaymentPage()),
                );
              },
            ),
            DrawerItem(
              icon: Icons.person,
              title: 'Profile',
              isSelected: false,
              onTap: () {
                Navigator.pop(context);
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const ProfilePage()),
                );
              },
            ),
            DrawerItem(
              icon: Icons.headset_mic,
              title: 'Help',
              isSelected: false,
              onTap: () {
                Navigator.pop(context);
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const HelpPage()),
...
